src/objects/Contact.object
<CustomObject>
    <fields>
        <fullName>Barrio__c</fullName>
        <label>Barrio</label>
        <length>200</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Cargo__c</fullName>
        <label>Cargo</label>
        <length>128</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Como_le_fue_en_real_estate__c</fullName>
        <label>Como le fue en real estate?</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Como_nos_conoci__c</fullName>
        <label>Como nos conoció?</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Como_se_sinti__c</fullName>
        <label>Como se sintió?</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Desea_recibir_informacion_por_mail__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Desea recibir informacion por mail</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Estado_civil__c</fullName>
        <label>Estado civil</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Soltero/a</fullName>
                </value>
                <value>
                    <fullName>Casado/a</fullName>
                </value>
                <value>
                    <fullName>Separado/a</fullName>
                </value>
                <value>
                    <fullName>Divorciado/a</fullName>
                </value>
                <value>
                    <fullName>Viudo/a</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Facebook__c</fullName>
        <label>Facebook</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>Fecha_nacimiento__c</fullName>
        <label>Fecha nacimiento</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Fecha_validacion_contra_boleto__c</fullName>
        <inlineHelpText>Es la fecha en que se constato la informacion del boleto</inlineHelpText>
        <label>Fecha validacion contra boleto</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Hobbies__c</fullName>
        <label>Hobbies</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Horario_de_contacto__c</fullName>
        <label>Horario de contacto</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Ingresos_anuales__c</fullName>
        <label>Ingresos anuales</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Instagram__c</fullName>
        <label>Instagram</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>Linkedin__c</fullName>
        <label>Linkedin</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>Motivo_de_inversion__c</fullName>
        <label>Motivo de inversion?</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Numero_documento__c</fullName>
        <label>Numero documento</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Observaciones_de_carga__c</fullName>
        <label>Observaciones de carga</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Orden_de_compra__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Orden de compra</label>
        <referenceTo>Orden_de_compra__c</referenceTo>
        <relationshipLabel>Contactos</relationshipLabel>
        <relationshipName>Contactos</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Para_cuando_necesita_hacer_la_operacion__c</fullName>
        <label>Para cuando necesita hacer la operacion?</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Preferencia_horario_de_contactacion__c</fullName>
        <label>Preferencia horario de contactacion</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>8 a 12</fullName>
                </value>
                <value>
                    <fullName>12 a 14</fullName>
                </value>
                <value>
                    <fullName>14 a 18</fullName>
                </value>
                <value>
                    <fullName>18 a 22</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Preferencia_medio_de_contactacion__c</fullName>
        <label>Preferencia medio de contactacion</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Llamada</fullName>
                </value>
                <value>
                    <fullName>Whatsapp</fullName>
                </value>
                <value>
                    <fullName>Mail</fullName>
                </value>
                <value>
                    <fullName>No contactar</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Preferencias_de_busqueda__c</fullName>
        <label>Preferencias de busqueda</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Profesion__c</fullName>
        <label>Profesion</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Que_esta_buscando__c</fullName>
        <label>Que esta buscando?</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Que_le_gustaria_recibir__c</fullName>
        <label>Que le gustaria recibir?</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Que_le_intereso_de_nuestra_propuesta__c</fullName>
        <label>Que le intereso de nuestra propuesta?</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Que_presupuesto_tiene__c</fullName>
        <label>Que presupuesto tiene?</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Relaci_n_con_el_titular__c</fullName>
        <label>Relación con el titular</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Conyuge</fullName>
                </value>
                <value>
                    <fullName>Hijo/a</fullName>
                </value>
                <value>
                    <fullName>Padre</fullName>
                </value>
                <value>
                    <fullName>Madre</fullName>
                </value>
                <value>
                    <fullName>Hermano/a</fullName>
                </value>
                <value>
                    <fullName>Amigo/a</fullName>
                </value>
                <value>
                    <fullName>Socio/a</fullName>
                </value>
                <value>
                    <fullName>Apoderado</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Tiene_experiencia_en_real_estate__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Tiene experiencia en real estate?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Tipo_documento__c</fullName>
        <label>Tipo documento</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>DNI</fullName>
                </value>
                <value>
                    <fullName>CUIL</fullName>
                </value>
                <value>
                    <fullName>CUIT</fullName>
                </value>
                <value>
                    <fullName>PASAPORTE</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Titular_o_Co_Titular__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Titular o Co-Titular</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Valoraci_n__c</fullName>
        <label>Valoración</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Hot</fullName>
                </value>
                <value>
                    <fullName>Warm</fullName>
                </value>
                <value>
                    <fullName>Cold</fullName>
                </value>
                <value>
                    <fullName>1</fullName>
                </value>
                <value>
                    <fullName>2</fullName>
                </value>
                <value>
                    <fullName>3</fullName>
                </value>
                <value>
                    <fullName>4</fullName>
                </value>
                <value>
                    <fullName>5</fullName>
                </value>
                <value>
                    <fullName>6</fullName>
                </value>
                <value>
                    <fullName>7</fullName>
                </value>
                <value>
                    <fullName>8</fullName>
                </value>
                <value>
                    <fullName>9</fullName>
                </value>
                <value>
                    <fullName>10</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <listViews>
        <fullName>AllContacts</fullName>
        <columns>FULL_NAME</columns>
        <columns>ACCOUNT.NAME</columns>
        <columns>CONTACT.TITLE</columns>
        <columns>CONTACT.PHONE1</columns>
        <columns>CONTACT.EMAIL</columns>
        <columns>CORE.USERS.FIRST_NAME</columns>
        <columns>CORE.USERS.LAST_NAME</columns>
        <filterScope>Everything</filterScope>
        <label>All Contacts</label>
    </listViews>
    <listViews>
        <fullName>MyContacts</fullName>
        <columns>FULL_NAME</columns>
        <columns>ACCOUNT.NAME</columns>
        <columns>CONTACT.TITLE</columns>
        <columns>CONTACT.PHONE1</columns>
        <columns>CONTACT.EMAIL</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <filterScope>Mine</filterScope>
        <label>My Contacts</label>
    </listViews>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>